docs: update README
Add icons section

--- a/README.adoc
+++ b/README.adoc
@@ -21,6 +21,54 @@ preamble
 
 === Material icons
 
+Asciidoc and Antora support Font Awesome 4.7 icons out of the box.
+The inline icon extension extends the icon support with Google Material icons.
+
+To add a Material icon, carry out the following steps:
+
+. Check the link:https://material.io/resources/icons/?style=baseline[Material icons guide^] to determine the name of the icon, for example `add_shopping_cart`.
+. To include the icon on a page, use the pattern `icon:add_shopping_cart[set=material]`.
+. If you want to colour the icon, add the colour via the `role` attribute: `icon:add_shopping_cart[set=material, role=red]`.
+
+The following colours are available:
+
+[cols="3"]
+|===
+|Role name |Colour group |Colour code
+
+|`lightblue`
+|Active
+|`#24b3e0`
+
+|`darkblue`
+|Info
+|`#3f54d0`
+
+|`green`
+|Add
+|`#6ad26a`
+
+|`orange`
+|Warning
+|`#ff873e`
+
+|`purple`
+|Transfer
+|`#e468f3`
+
+|`red`
+|Alert
+|`#f11539`
+
+|`yellow`
+|Action
+|`#ffdb4c`
+
+|===
+
+NOTE: The colours and colour groups represent the way colours are used in the plentymarkets UI.
+The styling of elements on plentymarkets websites may be different.
+
 === Overview pages
 
 Some pages only serve as an entry point to a section or subsection.
