feat: update docs

--- a/docs/de-de/modules/maerkte/pages/kelkoo.adoc
+++ b/docs/de-de/modules/maerkte/pages/kelkoo.adoc
@@ -121,7 +121,7 @@ Entsprechend der Formateinstellung *Versandkosten*.
 
 
 [#catalogue-export]
-=== _Möglichkeit 2:_ Katalogexport _(empfohlen)_
+=== _Möglichkeit 2:_ Katalogexport _(empfohlene Methode)_
 
 Mit dem Export über Kataloge machst du deinen Export zu {market} zukunftssicher und flexibel.
 
