--- a/docs/de-de/modules/maerkte/partials/otto-faq.adoc
+++ b/docs/de-de/modules/maerkte/partials/otto-faq.adoc
@@ -26,6 +26,60 @@ Für Speditionsversand speicherst du einen Speditionszuschlag, der auf die Stand
 Ob ein Artikel ein Paketartikel oder ein Speditionsartikel ist, legst du am Artikel fest.
 --
 
+[.collapseBox]
+.Wann werden Marken oder Kategoriegruppen in plentymarkets aktualisiert?
+--
+
+Die von OTTO Market bereitgestellten Marken und Kategoriegruppen werden in den folgenden Intervallen in plentymarkets aktualisiert:
+
+Marken: alle 2 Stunden
+Kategoriegruppen: einmal täglich
+
+Marken, die Händler:innen in OTTO Market erstellen, sind in plentymarkets erst nach der nächsten Aktualisierung verfügbar.
+--
+
+[.collapseBox]
+.Wie kann ich meine Artikel bei Otto deaktivieren (nicht löschen)?
+--
+
+Vielleicht möchtest du deine Artikel aufgrund von Urlaub oder aus anderen Gründen deaktivieren. Dazu entfernst du die Marktplatzverfügbarkeit für OTTO Market an den Varianten.
+
+Für einzelne Varianten entfernst du die Verfügbarkeit im Menü *Artikel » Variante » Tab: Verfügbarkeit » Bereich: Märkte*.
+
+image::maerkte:otto-faq-verfuegbarkeit.png[]
+
+Für mehrere Varianten geht das natürlich auch per Gruppenfunktion, per Import oder per Stapelverarbeitung.
+Wie das im einzelnen funktioniert, kannst du xref:artikel:massenbearbeitung.adoc#[hier] noch mal nachlesen.
+
+*_Wichtig:_* Wenn du den Hauptartikel änderst, aber die Vererbung der Verfügbarkeit an die Varianten aktiviert ist, musst du noch den Zeitstempel der Marktplatzexporte aktualisieren. Auch das geht per Gruppenfunktion, per Import oder per Stapelverarbeitung.
+
+Wenn du die Marktplatzverfügarkeit entfernt hast, werden deine Artikel innerhalb von 15 Minuten bei Otto Market deaktiviert.
+
+*_Tipp:_* Vergiss nicht, die Marktverfügbarkeit wieder zu aktivieren, sobald deine Artikel wieder online gehen sollen.
+--
+
+[.collapseBox]
+.Wie lösche ich meine Artikel bei OTTO Market?
+--
+Artikel können bei Otto nicht *gelöscht* werden.
+Wende dich hierzu bei Bedarf an OTTO Market.
+--
+
+[.collapseBox]
+.Wie ändere ich die SKU/Parent SKU meiner Artikel?
+--
+Du kannst die SKUs manuell anpassen. Aber dadurch wird die SKU **nicht bei OTTO angepasst**.
+Die SKU wird für deinen Artikel in dieser Kombination einmalig vergeben.
+
+Gehe deshalb so vor:
+
+. Nimm die Artikel bei OTTO manuell offline. +
+*_Tipp:_* Schalte die Artikel dazu inaktiv, indem du die Verfügbarkeit für OTTO Market entfernst.
+. Ändere die SKU und/oder die Parent SKU.
+. Aktiviere die Verfügbarkeit erneut.
+-> Mit dem nächsten nächtlichen Artikelexport werden deine Artikel mit der neuen SKU zu OTTO Market exportiert.
+--
+
 [#faq-items]
 === FAQ: Artikeldatenexport
 
@@ -325,8 +379,31 @@ Log durchsuchen:
   * *Referenzwert* deine Auftrags-ID
 . Filtere in mehreren Durchläufen in der Dropdown-Liste *Level* erst nach *warning* und dann nach *error*. +
 . Öffne die Logs mit der Nachricht *Variante ungültig*. +
-→ Im Log erhältst du die Varianten-ID und den Grund für die Ablehnung bzw. das fehlende Merkmal.
-. Unterhalb dieser Beschreibung findest du mögliche Fehlermeldungen und Lösungsansätze.
+→ Im Log erhältst du die Varianten-ID und den Grund für die Ablehnung bzw. das fehlende Merkmal. +
+→ Im Kapitel <<#1305, Auftragsbearbeitung: Fehlermeldungen im Log>> findest du Informationen zu möglichen Fehlermeldungen und Lösungsansätze.
+--
+
+
+[.collapseBox]
+.Der Auftrag wurde ohne Rechnungsdokument importiert, obwohl ich die Rechnung im OPC bei Otto Market sehen kann. Was nun?
+--
+
+Wenn du für Otto Market im Einrichtungsassistenten die Option *Kaufbelege als externe Rechnungen importieren* aktiviert hast, werden Rechnungen erst importiert, wenn die Versandbestätigung an OTTO Market gesendet hast.
+
+image::maerkte:otto-faq-keine-rechnung.png[]
+
+Wenn diese Option aktiviert ist und kein Rechnungsdokument importiert wurde, prüfe die folgenden Punkte:
+
+* Wurde die Ereignisaktion *Versandinformation an OTTO melden* ausgelöst?
+* Gibt es ein Retourenlabel für jede Paketnummer?
+* Sind alle Versanddienstleister für Otto Market korrekt im Assistenten verknüpft?
+* Stimmt dein in plentymarkets konfigurierter Retourendienstleister mit dem Retourendienstleister im OPC von Otto Market überein?
+* Sind die Adressen deines Lagers korrekt?
+
+Um schneller eine Lösung finden zu können, empfehlen wir dir, das Log nach Fehlermeldungen zu durchsuchen.
+
+Beachte, dass der Rechnungsimport nachträglich nicht mehr automatisch stattfinden kann. Hier müssen wir für dich tätig werden und deine Rechnung manuell importieren.
+Poste daher die Auftrags-ID im link:https://forum.plentymarkets.com/t/sammelthread-fuer-nachtraegliche-dokumentenimporte-rechnungen/647738[Sammelthread für nachträgliche Dokumentenimporte - Rechnungen]
 --
 
 [#1305]
@@ -341,6 +418,62 @@ Hier findest du mögliche Fehlermeldungen im Zusammenhang mit der Auftragsbearbe
 Dieser Fehler tritt in der Regel auf, wenn für den Auftrag zwar eine Paketnummer, aber keine Retouren-Tracking-Number (Retourenlabel) gefunden wurde. Überprüfe dies im Menü *Aufträge » Versand-Center*. Retourenlabels werden nach der Suche des jeweiligen Auftrags im Tab *Retourenetiketten* angezeigt. Wenn kein Etikett vorliegt, muss dieses Etikett nachträglich erstellt werden und der Versand erneut gemeldet werden.
 
 Um den Versand erneut zu melden, muss die Ereignis-Aktion mit der Aktion *Versandinformationen an OTTO melden* noch einmal ausgelöst werden. Je nach Ereignis muss das Ereignis unter Umständen zuvor rückgängig gemacht werden.
+
+NOTE: Für jedes Paket/jede Paketnummer muss ein eigenes Retourenetikett erstellt werden.
+
+Um den Versand erneut zu melden, muss die Ereignisaktion mit der Aktion *Versandinformationen an OTTO melden* erneut ausgelöst werden.
+--
+
+[.collapseBox]
+.*Versandadresse am Lager nicht gefunden.* / *Postal code or town of the warehouse address is empty.*
+--
+
+Mit der Versandbestätigung muss eine gültige Absenderadresse an OTTO Market gesendet werden. Existiert diese Absenderadresse nicht oder ist die Adresse unvollständig, kommt es bei der Versandbestätigung zu dieser Fehlermeldung.
+
+Prüfe die folgenden Einstellungen:
+
+* Die Versandbestätigung wird nur an OTTO Market gesendet, wenn die Absenderadresse des Lagers gespeichert wurde. Die Adresse speicherst du in den Einstellungen eines Lagers unter *Einrichtung » Waren » Lager » [Lager wählen] » Einstellungen*. Du musst die Adresse in dem Lager speichern, das für den Auftrag verwendet wird.
+
+Um den Versand erneut zu melden, muss die Ereignisaktion mit der Aktion *Versandinformationen an OTTO melden* erneut ausgelöst werden.
+--
+
+[.collapseBox]
+.*Keine Auftragspakete gefunden.*
+--
+
+Zum Zeitpunkt der Versandmeldung lag keine Paketnummer und/oder kein Retourenlabel vor. Prüfe, ob Paketnummer und Retourenlabel zum Zeitpunkt der Versandmeldung  vorlagen.
+
+Um den Versand erneut zu melden, muss die Ereignisaktion mit der Aktion *Versandinformationen an OTTO melden* erneut ausgelöst werden.
+--
+
+[.collapseBox]
+.*Ungültiger Retourendienstleister.*
+--
+
+NOTE: Bei OTTO Market sind nur die Retourendienstleister DHL, Hermes und GLS zulässig.
+
+* Prüfe, ob für den Auftrag eine Paketnummer und eine Retouren-Tracking-Nummer (Retourenlabel) existieren. Das überprüfst du im Menü *Aufträge » Versand-Center » [Auftrag suchen] » Tab: „Retourenetiketten“*.
+* Wenn kein Etikett existiert, muss dieses Etikett nachträglich erstellt werden und der Versand erneut gemeldet werden.
+
+Um den Versand erneut zu melden, muss die Ereignisaktion mit der Aktion *Versandinformationen an OTTO melden* erneut ausgelöst werden.
+
+--
+
+[.collapseBox]
+.*Versanddienstleister nicht gefunden.*
+--
+
+Um zu verstehen, welcher Versanddienstleister nicht gefunden wurde, muss die Log-Meldung geöffnet werden. Dort findet man die folgende Nachricht:
+
+* message:"Carrier ID 123 not mapped in OTTO market config."
+
+Dieser Fehler deutet darauf hin, dass der am Auftrag gespeicherte Versanddienstleister nicht mit einem Versanddienstleister von OTTO Market verknüpft wurde.
+Die in der Fehlermeldung angegebene Carrier ID entspricht der Versanddienstleister-ID im Menü *Einrichtung » Aufträge »  Versand » Optionen » Tab: Versanddienstleister*.
+
+* Prüfe im Otto Market Einrichtungsassistenten, ob der im Auftrag gespeicherte Versanddienstleister korrekt mit einem Versanddienstleister von OTTO Market verknüpft wurde. Nimm die Verknüpfung bei Bedarf vor und speichere die Einstellungen.
+
+Um den Versand erneut zu melden, muss die Ereignisaktion mit der Aktion *Versandinformationen an OTTO melden* erneut ausgelöst werden.
+
 --
 
 [#1307]
