--- a/docs/en-gb/modules/markets/pages/kelkoo.adoc
+++ b/docs/en-gb/modules/markets/pages/kelkoo.adoc
@@ -121,7 +121,7 @@ According to the format setting *Shipping costs*.
 
 
 [#catalogue-export]
-=== _Alternative 2:_ Catalogue export _(recommended)_
+=== _Alternative 2:_ Catalogue export _(recommended method)_
 
 Catalogue formats provide you with a long-term and flexible way to export your item data to {market}.
 
