--- a/docs/de-de/modules/warenwirtschaft/pages/leitfaden-inventur.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/leitfaden-inventur.adoc
@@ -5,14 +5,6 @@
 
 Du möchtest eine Inventur durchführen und somit deinen Warenbestand zu einem bestimmten Zeitpunkt erfassen? Dann bist du auf dieser Seite genau richtig. Hier erfährst du, welche Schritte für die Inventur notwendig sind und kannst den Vorgang auf deine Bedürfnisse abstimmen.
 
-////
-[IMPORTANT]
-.Orientierung: Verschiedene Vorgehensweisen zur Inventur in plentymarkets
-====
-mal überarbeiten; pW ist nicht Pflicht aber der einzige Weg ein Zählprotokoll zu erhalten (aktuell). plentymarkets App geht auch, oder halt Inventur ohne jegliche App. Irgendwie als Fall 1, Fall 2 oder Fall 3 beschreiben.
-====
-////
-
 [#100]
 == Vorbereitungen
 
@@ -37,7 +29,7 @@ Damit die Inventur genau so abläuft, wie es für dich am besten ist, müssen im
 [#300]
 === Erstellen von Exporten via Katalog
 
-Um eine Inventur durchzuführen und diese später auch dokumentieren und kontrollieren zu können, solltest du vor der Inventur die Bestände und Warenbewegungen deines Systems exportieren.
+Um eine Inventur durchzuführen und diese später auch dokumentieren und kontrollieren zu können, solltest du vor der Inventur die aktuellen Bestände und Warenbewegungen deines plentymarkets Systems exportieren.
 
 * Wie du generell einen Katalog für den Export von Daten erstellst, erfährst du auf der Handbuchseite zu den xref:daten:dateiexport.adoc#[Standardformaten von Katalogen].
 * Wie du einen Export der Warenbestände in einem Katalog erstellst, erfährst du auf der Handbuchseite des Formats xref:daten:katalog-warenbestaende.adoc#[Warenbestände].
@@ -57,19 +49,19 @@ Bevor du mit der Inventur startest, solltest du dir die Frage stellen, ob du vor
 
 * Solange der Inventurmodus aktiv ist, werden die Warenbewegungen in dieser Zeit zwar gespeichert, es werden aber keine Berechnungen durchgeführt.
 * Mit der Deaktivierung des Inventurmodus werden die ausstehenden Berechnungen durchgeführt.
-* Wenn du mit aktiviertem Inventurmodus die Lagerbestände nullst, dann bekommen Marktplätze und der eigene Webshop davon nichts mit. Wenn nun aber während der Inventur Waren verkauft werden, dann werden die Bestandreservierungen auch nicht berechnet und es kann daher zu Überverkäufen in dieser Zeit kommen.
+* Wenn du mit aktiviertem Inventurmodus die Lagerbestände nullst, sind Artikel, die du auf Marktplätzen und im eigenen Webshop anbietest, nicht von Auswirkungen betroffen. Wenn nun aber während der Inventur Waren verkauft werden, dann werden die Bestandreservierungen auch nicht berechnet und es kann daher zu Überverkäufen in dieser Zeit kommen.
 * Wenn der Inventurmodus nicht aktiviert ist, laufen die Berechnungen nach Bestandsänderung normal weiter. Wenn dann durch die App ein Lagerort gezählt wurde, werden die Bestände im Anschluss an das System übertragen und ggf. angepasst. Wenn nun also eine Menge eines Artikels sich auf einem Lagerort bestätigt, entsteht keine Warenbewegung.
 
 Entscheide also hier für dich, welches Vorgehen besser zum jeweiligen Ablauf passt. +
 In der folgenden Tabelle sind noch einmal die Vor- und Nachteile des Nullens aufgeführt.
 
-[[tabelle-vor-und-nachteile]]
+[[table-clearing-stocks]]
 .Vor- und Nachteile des Nullens
 [cols="2,2"]
 |====
 |Vorteile |Nachteile
 
-|Zum Stichtag sind alle Bestände aller Varianten in deinem Lager auf 0. Dies hat zur Folge, dass alle Mengen, die während der Inventur gezählt werden, auch eine Warenbewegung mit positivem Wert erhalten. +
+|Am Datum der Inventur weisen alle Varianten in deinem Lager einen Bestand von 0 auf. Das bedeutet, dass alle Mengen, die während der Inventur gezählt werden, zu einer Warenbewegung mit positivem Wert führen. +
 _Beispiel:_ Variante 123 +
 - Menge vor Inventur: 8 +
 - Menge durch Nullen: 0 +
@@ -95,8 +87,8 @@ _Beispiel:_ Variante 123 +
 [#600]
 === Daten exportieren
 
-Um festzuhalten, welche Artikelmengen vor der Inventur systemseitig auf Lager waren, sollten diese exportiert werden. Dies geschieht über unseren xref:daten:dateiexport.adoc#[Katalog] und das Exportformat xref:daten:katalog-warenbestaende.adoc#[Warenbestände].
-Lege die exportierte Datei anschließend bei dir zur späteren Kontrolle und Dokumentation ab.
+Um festzuhalten, welche Artikelmengen vor der Inventur auf Lager waren, solltest du einen Export durchführen. Dies geschieht über den xref:daten:dateiexport.adoc#[Katalog] und das Exportformat xref:daten:katalog-warenbestaende.adoc#[Warenbestände].
+Lade die exportierte Datei anschließend herunter und speichere sie zur späteren Kontrolle und Dokumentation auf deinem Rechner.
 
 [#700]
 == Inventur durchführen
@@ -116,7 +108,7 @@ Bei Nutzung des Inventurmodus::
 * xref:warenwirtschaft:inventur-vornehmen.adoc#1000[Inventurmodus deaktivieren]
 * xref:warenwirtschaft:inventur-vornehmen.adoc#200[Bestände nach der Inventur erneut exportieren] und sichern
 * Bei Verwendung der plentyWarehouse App: xref:warenwirtschaft:inventur-durchfuehren.adoc#700[Zählprotokoll herunterladen]
-* <<#1100, Abweichungen per Katalog exportieren und vergleichen>>
+* <<#1100, Bestandsabweichungen per Katalog exportieren und vergleichen>>
 --
 
 Ohne Nutzung des Inventurmodus::
@@ -127,7 +119,7 @@ Ohne Nutzung des Inventurmodus::
 * xref:warenwirtschaft:inventur-durchfuehren.adoc#300[Inventur mit plentyWarehouse App durchführen]
 * xref:warenwirtschaft:inventur-vornehmen.adoc#200[Bestände nach der Inventur erneut exportieren] und sichern
 * Bei Verwendung der plentyWarehouse App: xref:warenwirtschaft:inventur-durchfuehren.adoc#700[Zählprotokoll herunterladen]
-* <<#1100, Abweichungen per Katalog exportieren und vergleichen>>
+* <<#1100, Bestandsabweichungen per Katalog exportieren und vergleichen>>
 
 --
 ====
@@ -138,17 +130,17 @@ Ohne Nutzung des Inventurmodus::
 Nachdem du die Inventur durchgeführt hast, hast du die Möglichkeit, den Inventurvorgang rechtskonform zu protokollieren. Dazu steht dir im Bereich *Waren » Inventur* das Menü *Zählprotokoll-Export* zur Verfügung. Hier kannst du mithilfe verschiedener Filter Zählprotokolle im PDF- oder CSV-Format herunterladen.
 
 [IMPORTANT]
-.Zählprotokoll: Beschränkung auf plentyWarehouse
+.Einschränkungen für Zählprotokolle
 ====
-Aktuell beinhalten Zählprotokolle nur Daten zu Inventuren, die mit der xref:warenwirtschaft:plentywarehouse.adoc#[plentyWarehouse App] durchgeführt werden. Inventuren, die mit der xref:app:inventur.adoc#[plentymarkets App] oder lediglich durch den xref:warenwirtschaft:inventur-vornehmen.adoc#[Export und Import von Warenbeständen] vorgenommen werden, können also nicht mithilfe des Zählprotokolls dokumentiert werden.
+Aktuell beinhalten Zählprotokolle nur Daten zu Inventuren, die mit der xref:warenwirtschaft:plentywarehouse.adoc#[plentyWarehouse App] durchgeführt werden. Inventuren, die mit der xref:app:inventur.adoc#[plentymarkets App] oder lediglich durch den xref:warenwirtschaft:inventur-vornehmen.adoc#100[Export und Import von Warenbeständen] vorgenommen werden, können also nicht mithilfe des Zählprotokolls dokumentiert werden.
 ====
 
-Wichtige Zusatzinformationen zu möglichen Filtern und eine Anleitung zum Erstellen des Zählprotokolls findest du auf der Handbuchseite <<warenwirtschaft/plentywarehouse/inventur-durchfuehren#600, Inventur durchführen.>>
+Wichtige Zusatzinformationen zu möglichen Filtern und eine Anleitung zum Erstellen des Zählprotokolls findest du auf der Handbuchseite xref:warenwirtschaft:inventur-durchfuehren.adoc#600[Inventur durchführen].
 
 [#1100]
-== Inventurergebnisse und Bestände kontrollieren
+== Bestandsabweichungen per Katalog exportieren und vergleichen
 
-Um die Inventur im Nachgang zu kontrollieren, wenn z.B. große Abweichungen zwischen den Beständen vor und nach der Inventur vorliegen, bieten sich die folgenden 3 Möglichkeiten.
+Um die Ergebnisse der Inventur im Nachgang zu kontrollieren, wenn z.B. große Abweichungen zwischen den Beständen vor und nach der Inventur vorliegen, bieten sich die folgenden 3 Möglichkeiten.
 
 [#1200]
 === Vergleich der Bestände vor und nach der Inventur
@@ -158,23 +150,23 @@ Bei dieser Methode vergleichst du die beiden Bestands-Dateien, die du vor und na
 [#1300]
 === Vergleich der Gesamtabweichungen pro Variante
 
-Erstelle einen Export mit dem Katalogformat xref:daten:katalog-warenbewegungen.adoc#[Warenbewegungen] und filtere dabei nach dem xref:daten:katalog-warenbewegungen.adoc#30[Datumsbereich] und dem xref:daten:katalog-warenbewegungen.adoc#30[Grund] für die Warenbewegung (ID 302), um nur die Warenbewegungen zu exportieren, die während und durch die Inventur entstanden sind. Wenn du ebenfalls den Filter für die xref:daten:katalog-warenbewegungen.adoc#30[Summe der Warenbewegungen] pro Variante nutzt, dann erhältst du beim Export nur eine Datenzeile pro Variante.
-Dies ist allerdings auch nur dann der Fall, wenn bei dieser Variante vor und nach der Inventur eine Abweichung bei den Mengen vorliegt. Sind die Mengen auf allen Lagerorten identisch, dann erhältst du keine Datenzeile. Weichen die Mengen pro Lagerort ab, aber die Gesamtmenge der Bestände dieser Variante ist identisch, dann erhältst du im Export eine Datenzeile mit der Menge 0 im Feld *Warenbewegung*.
+Erstelle einen Export mit dem Katalogformat xref:daten:katalog-warenbewegungen.adoc#[Warenbewegungen] und filtere dabei nach dem xref:daten:katalog-warenbewegungen.adoc#30[Datumsbereich] und dem xref:daten:katalog-warenbewegungen.adoc#30[Grund] für die Warenbewegung (ID 302). So werden nur die Warenbewegungen exportiert, die während und durch die Inventur entstanden sind. Wenn du ebenfalls den Filter für die xref:daten:katalog-warenbewegungen.adoc#30[Summe der Warenbewegungen] pro Variante nutzt, enthält der Export nur eine Datenzeile pro Variante.
+Dies ist allerdings auch nur dann der Fall, wenn bei dieser Variante vor und nach der Inventur eine Abweichung bei den Mengen vorliegt. Sind die Mengen auf allen Lagerorten identisch, dann erhältst du keine Datenzeile. Weichen die Mengen pro Lagerort ab, aber die Gesamtmenge der Bestände dieser Variante ist identisch, enthält der Export eine Datenzeile mit der Menge 0 im Feld *Warenbewegung*.
 
-Diese Art des Exports ermöglicht es dir somit, sehr schnell zu erfassen, bei welchen Artikeln es Abweichungen in der Gesamtmenge pro Variante gegeben hat.
-Weitere Details dazu findest du im Kapitel zum Thema xref:warenwirtschaft:leitfaden-inventur.adoc#1500[Abweichungen feststellen und auswerten].
+Diese Art des Exports ermöglicht es dir, schnell zu erfassen, bei welchen Artikeln es Abweichungen in der Gesamtmenge pro Variante gegeben hat.
+Weitere Details dazu findest du im Kapitel zum Thema xref:warenwirtschaft:leitfaden-inventur.adoc#1500[Bestandsabweichungen feststellen und auswerten].
 
 [#1400]
 === Vergleich der Abweichungen einer Variante pro Lagerort
 
-Ein weiterer Export sollte über das Export-Format xref:daten:katalog-warenbewegungen.adoc#[Warenbewegungen] erstellt werden, allerdings ohne den Filter für die Summe der Warenbewegungen. Es werden also lediglich der Datumsfilter und der Grund für die Warenbewegung (ID 302) benötigt. In diesem Fall erhältst du dann eine Datenzeile, wenn die Menge einer Variante auf einem bestimmten Lagerort vor und nach der Inventur abweicht. Diese Liste ist dann hilfreich, wenn du durch die Liste der Gesamtabweichungen festgestellt hast, dass du eine Variante noch einmal genauer kontrollieren musst. Dann kannst du in der Liste jeden Lagerort prüfen, auf dem es Abweichungen zu dieser Variante gegeben hat und so zügig feststellen, auf welchem Lagerort du noch einmal genauer nachschauen solltest.
+Erstelle einen Export über das Katalogformat xref:daten:katalog-warenbewegungen.adoc#[Warenbewegungen], allerdings ohne den Filter für die Summe der Warenbewegungen. Es werden also lediglich der Datumsfilter und der Grund für die Warenbewegung (ID 302) benötigt. Mit dieser Methode erhältst du eine Datenzeile, wenn der Bestand einer Variante auf einem bestimmten Lagerort vor und nach der Inventur abweicht. Diese Liste ist hilfreich, wenn du durch die Liste der Gesamtabweichungen festgestellt hast, dass du eine Variante noch einmal genauer kontrollieren musst. Prüfe jeden Lagerort, auf dem es Abweichungen für diese Variante gegeben hat und stelle so fest, auf welchem Lagerort du noch einmal genauer nachschauen solltest.
 Weitere Details dazu findest du im nachfolgenden Kapitel zum Thema xref:warenwirtschaft:leitfaden-inventur.adoc#1500[Abweichungen feststellen und auswerten].
 
 [#1500]
-== Abweichungen zwischen Zählung und vorherigem Bestand feststellen und auswerten
+== Bestandsabweichungen feststellen und auswerten
 
-Das Export-Format xref:daten:katalog-warenbewegungen.adoc#[Warenbewegungen] vereinfacht dir die Auswertung der Inventur. Der Katalog mit diesem Format ermöglicht es, Abweichungen zwischen Zählung und vorherigem Bestand im System pro Variante sowie Abweichungen auf einzelnen Lagerorten festzustellen. +
-Beachte die nachfolgend beschriebenen Kriterien, um Abweichungen bei Warenbeständen nach der Inventur festzustellen.
+Das Katalogformat xref:daten:katalog-warenbewegungen.adoc#[Warenbewegungen] vereinfacht die Auswertung der Inventurergebnisse. Der Katalog mit diesem Format ermöglicht es, Abweichungen zwischen Zählung und vorherigem Bestand im System pro Variante sowie Abweichungen auf einzelnen Lagerorten festzustellen. +
+Beachte die folgenden Kriterien, um Abweichungen bei Warenbeständen nach der Inventur festzustellen.
 
 [#1600]
 === Kriterium 1: Sind die Bestände eines Artikels vor und nach der Inventur identisch?
@@ -182,11 +174,11 @@ Beachte die nachfolgend beschriebenen Kriterien, um Abweichungen bei Warenbestä
 Um zu prüfen, ob die Bestände eines Artikels vor und nach der Inventur identisch sind, erstelle einen Katalog mit dem Format xref:daten:katalog-warenbewegungen.adoc#[Warenbewegungen]. Exportiere dir damit alle Warenbewegungen (gruppiert pro Variante), die im Zeitraum der Inventur für den Warenbewegungsgrund *Korrektur durch Inventur* durchgeführt wurden.
 
 Um pro Variante zu gruppieren, nutze im Katalog den Filter xref:daten:katalog-warenbewegungen.adoc#30[Summe der Warenbewegungen]. Wähle über einen weiteren Filter zusätzlich auch den xref:daten:katalog-warenbewegungen.adoc#30[Datumsbereich], in dem die Inventur stattgefunden hat.
-Um nur die Warenbewegungen zu exportieren, die mit der Inventur zu tun haben, setze außerdem den Filter für den xref:daten:katalog-warenbewegungen.adoc#20[Grund] *Warenkorrektur durch Inventur* mit der ID `302`.
+Um nur die Warenbewegungen zu exportieren, die mit der Inventur zu tun haben, setze außerdem den Filter für den xref:daten:katalog-warenbewegungen.adoc#30[Grund] *Warenkorrektur durch Inventur* mit der ID `302`.
 Als Ergebnis wird die Gesamtabweichung pro Variante ausgegeben. Im besten Fall ist diese immer 0. +
 Die exportierte Liste zeigt dir somit auf einen Blick, bei welchen Artikeln es Abweichungen vor und nach der Inventur gegeben hat.
 
-*_Beachte:_* Die Liste zeigt allerdings nicht, ob bei einem Lagerort für einen Artikel 5 Stück mehr gezählt wurden und bei einem anderen Lagerort 3 Stück weniger, denn die Summe ist 0. Die Liste dient somit nur dem Gesamtüberblick der Abweichungen, berücksichtigt Abweichungen auf einzelnen Lagerorten aber nicht.
+*_Beachte:_* Die Liste zeigt nicht, ob bei einem Lagerort für einen Artikel 5 Stück mehr gezählt wurden und bei einem anderen Lagerort 3 Stück weniger, denn die Summe ist 0. Die Liste dient somit nur dem Gesamtüberblick der Abweichungen, berücksichtigt Abweichungen auf einzelnen Lagerorten aber nicht.
 
 [#1700]
 === Kriterium 2: Liegen die Artikel vor und nach der Inventur auf den gleichen Lagerorten?
@@ -194,7 +186,7 @@ Die exportierte Liste zeigt dir somit auf einen Blick, bei welchen Artikeln es A
 Über einen längeren Zeitraum hinweg kann es vorkommen, dass Ware umgelagert wurde, das Umbuchen im System allerdings nicht stattgefunden hat. +
 Um Abweichungen von Artikeln auf einzelnen Lagerorten sehen zu können, erstelle einen Katalog mit dem Format xref:daten:katalog-warenbewegungen.adoc#[Warenbewegungen]. Exportiere dir damit alle Warenbewegungen, die im Zeitraum der Inventur für den Warenbewegungsgrund *Korrektur durch Inventur* durchgeführt wurden.
 
-Nutze dafür zunächst den Filter für den xref:daten:katalog-warenbewegungen.adoc#30[Datumsbereich], in dem die Inventur stattgefunden hat. Um nur die Warenbewegungen zu erhalten, die mit der Inventur zu tun haben, verwende außerdem den Filter für den xref:daten:katalog-warenbewegungen.adoc#20[Grund] *Korrektur durch Inventur* mit der ID `302`.
+Nutze dafür zunächst den Filter für den xref:daten:katalog-warenbewegungen.adoc#30[Datumsbereich], in dem die Inventur stattgefunden hat. Um nur die Warenbewegungen zu erhalten, die mit der Inventur zu tun haben, verwende außerdem den Filter für den xref:daten:katalog-warenbewegungen.adoc#30[Grund] *Korrektur durch Inventur* mit der ID `302`.
 Als Ergebnis bekommst du pro Warenbewegung, also pro Abweichung gegenüber dem Ergebnis vor der Inventur, einen Eintrag in der Liste. +
 *_Beispiel:_* Die Variante mit der ID 123 wurde im System 10 Mal auf Lagerort A gebucht, während der Inventur dort aber nicht gezählt, dafür aber 10 Mal auf Lagerort B. In diesem Fall besteht für diese Variante eine Warenbewegung von -10 für Lagerort A und eine Warenbewegung von +10 für Lagerort B. In der Summe bedeutet das, dass die Gesamtmenge vor und nach der Inventur für diese Variante identisch ist, aber physisch auf einem anderen Lagerort liegt als zuvor.
 
