mytoys limango - payment method - EN

--- a/docs/en-gb/modules/markets/pages/mytoys.adoc
+++ b/docs/en-gb/modules/markets/pages/mytoys.adoc
@@ -160,6 +160,13 @@ Select one or several warehouses that contain the products that you want to sell
 
 include::partial$activate-referrer.adoc[]
 
+[#payment-method]
+=== Activating the payment method
+
+:payment-method: myToys
+
+include::partial$activate-payment-method.adoc[]
+
 [#450]
 === Defining a sales price
 
