--- a/docs/en-gb/modules/orders/pages/accounting.adoc
+++ b/docs/en-gb/modules/orders/pages/accounting.adoc
@@ -534,7 +534,7 @@ Setting up revenue accounts for revenues that are exempt from VAT:
 . *Save* (icon:save[role="green"]) the settings.
 
 [#820]
-=== Saving booking accounts for plentymarkets POS events3 and higher)
+=== Saving booking accounts for plentymarkets POS events (plentymarkets app version 1.7.3 and higher)
 
 Orders generated in plentyPOS are assigned to the xref:orders:accounting.adoc#800[revenue accounts] saved in plentymarkets. Because deposits, withdrawals and till count discrepancies are not orders, you can save booking accounts for these POS events. For further information on how to save booking accounts for POS events, refer to the xref:pos:integrating-plentymarkets-pos.adoc#940[Integrating POS] page of the manual.
 
