--- a/docs/de-de/modules/warenwirtschaft/pages/rueckstandsliste-verwalten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/rueckstandsliste-verwalten.adoc
@@ -40,11 +40,11 @@ Ausstehende Artikel suchen:
 | *Sortierung*
 |Reihenfolge wählen, in der die Suchergebnisse angezeigt werden.
 
-| **Limit**
-|Anzahl der maxiaml angezeigten Suchergebnisse.
+| *Limit*
+|Anzahl der maximal angezeigten Suchergebnisse.
 
 | *Eigner*
-| **ALLE** oder einen der in deinem System angelegten Eigner wählen.
+| *ALLE* oder einen der in deinem System angelegten Eigner wählen.
 
 | *Lieferant*
 | *ALLE* oder einen der in deinem System angelegten Lieferanten wählen.
