--- a/docs/de-de/modules/maerkte/pages/limango.adoc
+++ b/docs/de-de/modules/maerkte/pages/limango.adoc
@@ -71,7 +71,7 @@ Nachdem du das limango-Plugin installiert hast, richtest du den Marktplatz in pl
 
 === Grundeinstellungen vornehmen
 
-Nimm zunächt die Grundeinstellungen in den Plugin-Einstellungen ein. Halte dazu die Zugangsdaten bereit, die du von limango erhalten hast.
+Nimm zunächst die Grundeinstellungen in den Plugin-Einstellungen ein. Halte dazu die Zugangsdaten bereit, die du von limango erhalten hast.
 
 [.instruction]
 Grundeinstellungen vornehmen:
