--- a/docs/de-de/modules/maerkte/partials/otto-faq-2.adoc
+++ b/docs/de-de/modules/maerkte/partials/otto-faq-2.adoc
@@ -40,103 +40,22 @@ Wenn deine Variante alle Voraussetzungen erfüllt und die Variante trotzdem nich
 | *info*
 | Log-Einträge mit dieser Meldung deuten auf eine erfolgreiche Übertragung hin. Das kann zum Beispiel so aussehen:
 
-image::maerkte/assets/otto-faq-logs-1.png[]
+image::maerkte:otto-faq-logs-1.png[]
 
 | *error*
 | Log-Einträge mit dieser Meldung deuten auf einen Fehler bei der Übertragung hin. In der Regel bedeutet das, dass deine Variante nicht valide ist. Daher wurde die Variante auch nicht exportiert. Das kann zum Beispiel so aussehen:
 
-image::maerkte/assets/otto-faq-logs-2.png[]
+image::maerkte:otto-faq-logs-2.png[]
 
 
 Meldungen dieser Art kannst du öffnen und so die Details einblenden:
 
-image::maerkte/assets/otto-faq-logs-3.png[]
+image::maerkte:otto-faq-logs-3.png[]
 
 Im Screenshot handelt es sich zum Beispiel um einen Fehler in der Varianten-ID *1167*. Bemängelt wird das Feld "productDescription.category".
 |===
+--
 
-
-
-### *Mögliche Fehlermeldungen:*
-
-
-[details="- "missing requirements - ean""]
-- Überprüfe, ob deine Variante eine EAN besitzt.
-- Überprüfe, ob der im Katalog verknüpfte Barcode im Feld "EAN*" zum hinterlegten Barcode-Typ deiner Variante passt.
-- Überprüfe, ob dein Barcode-Typ für den Marktplatz "OTTO Market" freigegeben ist. Öffne dazu das Menü **Einrichtung » Artikel » Barcode**.
-[/details]
-
-
-
-[details="- "missing requirements - sku" / "productReference""]
-- Überprüfe deine Verknüpfung zu den Feldern "Parent-SKU*" und "SKU*" im Katalog.
-- Stelle sicher, dass du mindestens 2 Datenfelder zu beiden Felden verknüpft hast (jeweils als Ausweichdatenfeld).
-
-> Eine Empfehlung für die mögliche Verknüpfung findest du  [hier](#sku-validation-error).
-
-[/details]
-
-
-[details="- "missing requirements - stock""]
-- Deine Variante besitzt keinen positiven Netto-Warenbestand im verknüpften Lager deines Katalogs.
-Sollte im Katalog *kein* Lager verknüpft worden sein, wird die **Summe aller Vertriebslager** übergeben.
- Du kannst alternativ auch das *virtuelle Gesamtlager* verknüpfen.
-> Weitere Informationen zum Mapping des Feldes "Bestand" erhältst du hier -> [Otto Market Handbuch](https://knowledge.plentymarkets.com/maerkte/otto/otto-market/#905)
-[/details]
-
-
-[details="- "missing requirements - productDescription.category""]
-- Überprüfe deine verknüpften Datenfelder zum Feld "Kategorie*" des Katalogs. Kategorien lassen sich am ehesten über bereits bestehende Kategorien (Tab: Kategorien) deiner Varianten oder über Eigenschaften (Tab: Eigenschaften) verknüpfen. Prüfe daher, dass jeweils eine Verknüpfung zur Variante besteht.
-[/details]
-
-
-[details="- "missing requirements - productDescription.brand""]
-- Überprüfe deine verknüpften Datenfelder zum Feld "Marke*" des Katalogs. Marken lassen sich am ehesten über bereits bestehende Hersteller (Tab: Global) des Artikels, oder über Eigenschaften (Tab: Eigenschaften) der Varianten verknüpfen. Prüfe daher, dass jeweils eine Verknüpfung zur Variante besteht. Wenn du die Verknüpfung über den Hersteller vornehmen willst, wähle **Datenfeld hinzufügen* » Hersteller » und deinen gewünschten Hersteller* aus.
-
-Es ist außerdem anzumerken, dass die verknüpfte OTTO-Marke im Dropdown ausgewählt werden sollte. Eine händische Eingabe der Marke sollte nicht vorgenommen werden.
-
-Sollte deine Marke im OTTO-Markenfeld (links) nicht existieren, kannst du die Marke bei OTTO Market registrieren lassen. Genaueres dazu findest du im Helpdesk bei OTTO Market. Beachte außerdem folgendes: [Marken-Aktualisierung](#marken-aktualisierung).
-[/details]
-
-
-[details="- "missing requirements - mediaAssets.IMAGE" bzw. "mediaAssets""]
-- Beide Fehler haben in der Regel die gleiche Ursache. Öffne deinen Artikel im *Tab: Bilder*. Überprüfe deine Artikelbilder und stelle sicher, dass die Verfügbarkeit "OTTO Market" gesetzt wurde:
-
-
-![4|690x481](upload://1df60uVj9Y32qYhFkRSPE8d9nJU.png)
-[/details]
-
-
-[details="- "missing requirements - delivery.deliveryTime""]
-- Überprüfe die im Katalog verknüpfte Lieferzeit im Feld *"Lieferzeit in Tagen"* mit deiner Variante. In der Regel kannst du die Verknüpfung für die Verfügbarkeit deiner Variante vornehmen:
-
-
-![5|489x250](upload://wvCxNMPGiW6aboXPQ7IoPpeg9lj.png)
-
-Eine Übersetzung der einzelnen Verfügbarkeitsstufen zur jeweiligen ID findest du unter **Einrichtung » Artikel » Verfügbarkeit**.
-[/details]
-
-
-[details="- "missing requirements - delivery.type""]
-- Überprüfe die im Katalog verknüpfte Versandart im Feld "Versandart*" mit deiner Variante. Die Verknüpfung kann z.B. über ein Versandprofil (Tab: Global) des Artikels oder einer Eigenschaft (Tab: Eigenschaft) der Variante vorgenommen werden.
-[/details]
-
-
-[details="- "missing requirements - pricing.standardPrice.amount" bzw. "pricing.standardPrice.currency""]
-- Beide Fehler haben in der Regel die gleiche Ursache. Überprüfe, ob im Feld "Verkaufspreis*" des Katalogs eine Verknüpfung zum Verkaufspreis der jeweiligen Variante hinterlegt wurde. Öffne zusätzlich das Menü *Einrichtung » Artikel » Verkaufspreise* und überprüfe, ob der im Katalog hinterlegte Verkaufspreis für die *Herkunft* "OTTO Market" freigegeben wurde.
-[/details]
-
-[details="- "missing requirements - pricing.vat""]
-Das betrifft den MwSt. Satz bzw. die Umsatzsteuer.
-Diese muss an der Variante hinterlegt sein (*Artikel/Einstellungen unter Kosten*)
-![Bildschirmfoto 2022-01-19 um 10.54.33|468x141](upload://7X6dyyeduIsOKzaVjY7QDyHLN7v.png)
-
-und im Katalog richtig gemappt worden sein. Bspw. darf der Wert von Otto (unter *Umsatzsteuer*) oder die Verknüpfung zum Steuersatz des Artikels nicht fehlen.
-![Bildschirmfoto 2022-01-19 um 10.49.49|610x275, 50%](upload://gvjQPQ3o3ez2DCVGaPnl9aaruNN.png)
-
-[/details]
-
-___
 
 ## Möglichkeit 2: Fehlermeldungen mit der Integration \DefaultSkuMutator finden
 
